--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=mic-e-commerce-api-gateway
+
+eureka.instance.instance-id=${spring.application.name}:${random.uuid}
+
+spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.loadbalancer.ribbon.enabled=false
