--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=mic-e-commerce-api-gateway
+server.port=8080
 
+eureka.client.service-url.defaultZone=http://mic-e-commerce-eureka-services:8761/eureka/
 eureka.instance.instance-id=${spring.application.name}:${random.uuid}
 
 spring.cloud.gateway.discovery.locator.enabled=true
