--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,10 @@ eureka.instance.instance-id=${spring.application.name}:${random.uuid}
 
 spring.cloud.loadbalancer.ribbon.enabled=false
 
+spring.cloud.gateway.globalCors.corsConfigurations.[/**].allowedOrigins=*
+spring.cloud.gateway.globalCors.corsConfigurations.[/**].allowedMethods=*
+spring.cloud.gateway.globalCors.corsConfigurations.[/**].allowedHeaders=*
+
 spring.cloud.gateway.routes[0].id=mic-e-commerce-auth
 spring.cloud.gateway.routes[0].uri=lb://MIC-E-COMMERCE-AUTH
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/auth/**, /api/roles/**
